k8s/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: demo
  labels:
    app: demo-web
    team: microkube
    env: demo
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
    - name: http
      port: 80
      targetPort: 80
